@@ -8,14 +8,14 @@
 	<title>Blueprint CSS - Test All (compressed CSS)</title>
 
   <!-- Framework CSS -->
-	<link rel="stylesheet" href="../screen.css" type="text/css" media="screen, projection" />
-	<link rel="stylesheet" href="../print.css" type="text/css" media="print" />
-  <!--[if lt IE 7]><link rel="stylesheet" href="../ie.css" type="text/css" media="screen, projection"><![endif]-->
+	<link rel="stylesheet" href="../blueprint/screen-compressed.css" type="text/css" media="screen, projection" />
+	<link rel="stylesheet" href="../blueprint/print.css" type="text/css" media="print" />
+  <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
 	
 	<!-- Show the grid and baseline -->
 	<style type="text/css">
 	/*<![CDATA[*/
-			.container { background: url('../lib/grid.png'); }
+			.container { background: url('../blueprint/lib/grid.png'); }
 	/*]]>*/
 	</style>
 </head>
